fix horizontal small screen overflow on front page

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ nav a:visited{
 	flex-direction: column;
 	background-color: #97B3D0FF;
 	height: 100vh;
+	min-height: 630px;
 }
 
 .title {
